# drf_base

./: pyproject.toml
api/: models.py  serializers.py
api/migrations/: 0001_initial.py  0002_initial.py
blog_api/: settings.py
users/: models.py
users/migrations/: 0001_initial.py
