[tool.poetry]
name = "drf-name"
version = "0.1.0"
description = "First project on Django Rest Framework"
authors = ["Alex"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
